fixed contrast error on Join, added icon

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -345,15 +345,18 @@ form {
 
 form fieldset {
   margin: 2rem 0;
-  border: 2px solid var(--accent1-color);
+  border: 3px solid var(--accent1-color);
   border-radius: 10px;
-  padding: 0.5rem 2%;
+  padding: 0.5rem 4%;
 }
 form legend {
-  color: var(--accent1-color);
-  margin: 0 1rem;
-  padding: 0 0.5rem;
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+  text-align: center;
+  padding: 0.4rem 0.4rem;
+  border: 3px solid var(--accent1-color);
 }
+
 form label.top,
 form div {
   display: block;
